readme updated property cleanup