@@ -1,41 +1,87 @@
 Introduction
-========
-chef-alfresco is a collection of recipes that provide a modular way to install Alfresco using Chef.
-There is no default recipe in chef-alfresco; here follows the complete list:
-* build_tools - Contains tools (apt, nokogiri and chef-rewind) that are needed during the installation process of some Chef resources
-* 3rdparty - Contains the tools that provide transformation features to Alfresco Repository (TODO, should be called 'transformation')
-* java_tools - Contains JDK and Maven 3; it also handles the settings.xml setup, in case of an Enterprise installation
+---
+chef-alfresco is a collection of recipes that provide a modular way to install Alfresco using Chef; it uses [artifact-deployer](https://github.com/maoo/artifact-deployer) to fetch artifacts from remote Apache Maven repositories, given artifact coordinates in a JSON format, along with other third-party recipes that install the DB (MySQL), Servlet Container (Tomcat7) and transformation tools (ImageMagick, LibreOffice, swftools)
+
+There is no default recipe in chef-alfresco, because the Alfresco installation order (in Chef terms, ```run_list```) may depend on architectural requirements; here follows the complete list:
+* 3rdparty - Contains the tools that provide transformation features to Alfresco Repository
+* mysql_createdb - Creates an alfresco DB (on MySQL) and grants all permissions to the alfresco user
 * mysql_server - Install MySQL5 and grants access to ```node['alfresco']['db']['repo_hosts']```
-* repository - Fetches and/or installs Alfresco Repository WAR; it also handles log4j.properties and alfresco-global.properties patching
-* share - Fetches and/or installs Alfresco Share WAR; it also handles log4j.properties patching
-* solr - Fetches and/or installs Alfresco Solr Banduru; it also handles log4j.properties and solr configuration patching
+* repo_config - Patches alfresco-global.properties and configures the deployment of
+  * MySQL Java Connector, to be stored into Tomcat lib folder
+  * Alfresco Repository WAR
+* share_config - Creates shared/classes/alfresco/web-extension folder tree and patches share-config-custom.xml, setting the correct URLs for remote endpoints; it also configures the deployment of Alfresco Share WAR
+* solr_config - Patches solrcore.properties and solr.xml files, configures the deployment of Apache Solr (Alfresco Patched version)
 * tomcat - Installs (a 'rewinded') Apache Tomcat (that won't start after the installation; it will be restarted on each repo/share/solr redeployment)
 
-Installation
-========
-If you want to use chef-alfresco in a chef recipe/cookbook, please refer to the [original project page](https://github.com/fnichol/chef-alfresco) and follow the installation advises.
-If you'd like to have some examples on how to use chef-alfresco, please refer to the [Vagrant Alfresco](https://github.com/maoo/vagrant-alfresco) roles and Vagrantfiles for [allinone](https://github.com/maoo/vagrant-alfresco/blob/master/Vagrantfile.allinone) and [multivm](https://github.com/maoo/vagrant-alfresco/blob/master/Vagrantfile.multivm) installations
+Usage
+---
+```
+"tomcat" : {
+    "base_version" : 7,
+    "user" : "tomcat7",
+    "group" : "tomcat7",
+    "java_options" : "-Xmx1500M -XX:MaxPermSize=256M -Dsolr.solr.home=/var/lib/tomcat7/alf_data/solrhome"
+},
+"alfresco" : {
+    "maven" : {
+        "repo_type" : "public"
+    },
+    "solr" : {
+        "alfresco_secureComms" : "none",
+        "solr_secureComms" : "none"
+    }
+},
+"maven" : {
+    "repos" : {
+        "maoo-public-cloudbees" : {
+            "url" : "https://repository-maoo.forge.cloudbees.com/release"
+        }
+    }
+},
+"artifacts" : {
+    "alfresco" : {
+        "groupId" : "it.session.alfresco",
+        "artifactId" : "alfresco-nossl",
+        "version" : "4.2.f"
+    },
+    "solr" : {
+        "groupId" : "it.session.alfresco",
+        "artifactId" : "apache-solr-nossl",
+        "version" : "1.4.1-alfresco-patched"
+    }
+},
+"java" : {
+    "default" : true,
+    "jdk_version" : "7",
+    "install_flavor" : "oracle",
+    "oracle" : {
+        "accept_oracle_download_terms" : true
+    }
+}
+```
 
-Configuration
-========
-Every recipe contains a set of default attribute values that can be easily overridden; there are also a default set of properties that is used across different recipes; below are reported the most common properties that you may be interested to override
+An example of ```run_list``` is
 
-### Default
-* default['alfresco']['groupId'] - Default is "org.alfresco"
-* default['alfresco']['version'] - Default is "4.2.e"
-* default['alfresco']['default_port'] - The http port configured to run Tomcat; default is "8080"
-* default['alfresco']['default_protocol'] - The protocol used to deploy Repository/Share apps
-* default['alfresco']['root_dir'] - The 'alf_data' folder path; default is "/var/lib/tomcat7/alf_data"
+```
+    "run_list": [
+        "apt::default",
+        "alfresco::3rdparty",
+        "alfresco::mysql_server",
+        "alfresco::mysql_createdb",
+        "tomcat::default",
+        "alfresco::repo_config",
+        "alfresco::share_config",
+        "artifact-deployer::default",
+        "alfresco::solr_config"]
+```
 
-Other attributes can be found in [attributes/default.rb](https://github.com/maoo/chef-alfresco/blob/master/attributes/default.rb)
-
-### Build Tools
-* default['xml']['packages'] - The list of OS packages needed by Nokogiri and other applications
-
-Other attributes can be found in [attributes/build_tools.rb](https://github.com/maoo/chef-alfresco/blob/master/attributes/build_tools.rb)
+Projects Using chef-alfresco
+---
+* [vagrant-alfresco](https://github.com/maoo/vagrant-alfresco) is a Vagrant descriptor that uses chef-alfresco to run local dev boxes
+* [vagrant-alfresco-boxes](https://github.com/maoo/vagrant-alfresco-boxes) is a Packer implementation that creates Virtualbox and AWS AMIs with the all-in-one Alfresco stack
 
 Dependencies
-========
+---
 * [swftools](https://github.com/fnichol/swftools)
 * [openoffice](https://github.com/rgauss/chef-openoffice)
 * [imagemagick](https://github.com/cookbooks/imagemagick)
@@ -43,20 +89,17 @@ Dependencies
 * [java](https://github.com/opscode-cookbooks/java)
 * [mysql](https://github.com/opscode-cookbooks/mysql)
 * [tomcat](https://github.com/opscode-cookbooks/tomcat)
-* [openssl](https://github.com/opscode-cookbooks/openssl)
-* [maven](https://github.com/opscode-cookbooks/maven)
-* [xml](https://github.com/opscode-cookbooks/xml)
-* [apt](https://github.com/opscode-cookbooks/apt)
 * [build-essential](https://github.com/opscode-cookbooks/build-essential)
+* [artifact-deployer](https://github.com/maoo/artifact-deployer)
 
 Credits
-========
-This project is a fork of the original [chef-alfresco](https://github.com/fnichol/chef-alfresco) developed by [Fletcher Nichol](https://github.com/fnichol); the code have been almost entirely rewritten, however the original implementation still works with Community 4.0.x versions and provides a different approach to Alfresco installation (using Alfresco Linux installer) and - most importantly - the set of recipes to rely upon in order to avoid reinventing the wheel.
+---
+This project is a fork of the original [chef-alfresco](https://github.com/fnichol/chef-alfresco) developed by [Fletcher Nichol](https://github.com/fnichol); the code have been almost entirely rewritten, however the original implementation still works with Community 4.0.x versions and provides a different approach to Alfresco installation (using Alfresco Linux installer).
 
 A big thanks to Nichol to starting this effort!
 
 License and Author
-========
+---
 Copyright 2013, Maurizio Pillitu
 
 Licensed under the Apache License, Version 2.0 (the "License");
